Fri Aug  3 10:32:45 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_async): Don't do inet_aton and
	   call callback immediately.  This is confusing for the
	   programmer and can lead to bugs.  Now, either NULL will be
	   returned or the callback will be called later.  PROGRAMMERS:
	   For the old semantics, call gnet_inetaddr_new_nonblock and
	   if it fails, call gnet_inetaddr_new_async.
	  
Wed Jul 25 14:23:16 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c: Added pthread implementation of
	   gnet_inetaddr_new_async.
	* src/gnet-private.h (_GInetAddrAsyncState ): "
	* configure.in: Check for pthreads

Wed Jun 13 11:29:25 2001  Andrew Lanoix <alanoix@umich.edu>

	* gnet.def: update
	* README.win32: update
	* tests/Makefile.mingw: Build hash.c
	* tests/hash.c: Add a note that extra \r's on win32
	  text files will throw off SHA and MD5 if you don't
	  remove them
  
Sat Jun  9 15:35:19 2001  David Helder  <dhelder@umich.edu>

	* tests/hash.c: Actually removed mmap as advertised.

Fri Jun  8 16:49:16 2001  David Helder  <dhelder@umich.edu>

	* tests/hash.c: Don't use mmap.  Don't make main loop.

Fri Jun  8 15:26:41 2001  David Helder  <dhelder@umich.edu>

	* examples/echoserver.c (async_server_iofunc): Should be
	   accept_nonblock in async_server_iofunc, not accept.
	
	* BUGS: Typo

Thu May 31 10:46:30 2001  David Helder  <dhelder@umich.edu>

	* Makefile.am (EXTRA_DIST): Add README.win32 GNET.DSP
	     config.h.win32 gnet.def
	* */Makefile.am: Add makefile.mingw
	
	* configure.in: Version is now 1.1.1 [unreleased]
	
	* configure.in: Remove poll check
	* src/udp.c (gnet_udp_socket_has_packet): Use select,
	   not poll.
	* src/gnet-private.h: Remove poll
	* README.macosx: Added
	* Makefile.am: Added README.macosx to 
	   EXTRA_DIST
	* AUTHORS: Added Eric Cronin for above

	* src/sha.c (gnet_sha_clone): Added.
	* src/md5.c (gnet_md5_clone): Added.

	* debian/control.in: Sync with README
